# Quantitative_Backtester

./: README.md  pyproject.toml
src/strategy_lab/: data.py  engine.py  metrics.py  report_builder.py
src/strategy_lab/app/: main.py
tests/: test_engine.py  test_metrics.py
